tests/baselines/reference/computedPropertyNames46_ES5.errors.txt
tests/cases/conformance/es6/computedProperties/computedPropertyNames46_ES5.ts(2,5): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.


==== tests/cases/conformance/es6/computedProperties/computedPropertyNames46_ES5.ts (1 errors) ====
    var o = {
        ["" || 0]: 0
        ~~~~~~~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
    };